--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,15 @@ body {
 .swiper-slide .bottom {
 	margin-top: 5%;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
+}
+.swiper-slide .bottom div{
+	flex-basis: calc(100% / 3);
+}
+.swiper-slide .bottom img {
+	width: 90%;
+	margin: 0 5%;
 }
 
 
