--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 		rgb(242, 252, 255) 0%,
 		rgb(173, 217, 228) 100%
 	);
-	margin: 2%;
+	margin: 2.5vh 2vw;
     width: 96vw;
     height: 95vh;
     box-sizing: border-box;
@@ -28,53 +28,101 @@ body {
     overflow: scroll;
 }
 .swiper-wrapper {
-	height: calc(100vh - 110px);
+	height: calc(100% - 100px);
 }
 .swiper-slide {
 	padding: 0 5vw;
 	box-sizing: border-box;
 	display: flex;
-	flex-wrap: wrap;
-}
-.swiper-slide.text-only {
-	text-align: center;
-	display: block;
-}
-
-.swiper-slide .left {
-	width: 35%;
-	margin: 0 0 0 5%;
-}
-.swiper-slide .right {
-	width: 60%;
-}
-.swiper-slide .bottom {
-	margin-top: 5%;
-	display: flex;
-	flex-wrap: wrap;
+	flex-direction: column;
 	justify-content: space-between;
 }
-.swiper-slide .bottom div{
-	flex-basis: calc(100% / 3);
-}
-.swiper-slide .bottom img {
-	width: 90%;
-	margin: 0 5%;
-}
 
-
-/*スライド内容*/
+/*スライド共通*/
+.text-only {
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
 h1{
+	margin-top: 0;
 	font-size: 2.5em;
 	font-weight: 300;
 }
 h2{
+	margin-top: 0;
 	font-size: 2em;
 	font-weight: 300;
 }
+h3 {
+	margin: 0;
+	font-size: 1em;
+	font-weight: bold;
+}
+p {
+	margin: 0;
+}
+.copyRight {
+	font-size: 10px;
+	text-align: right;
+	line-height: 1;
+	opacity: .5;
+}
+small {
+	font-size: 10px;
+}
+.top,
+.bottom {
+	display: flex;
+}
+.bottom {
+	margin-top: 1.5em;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	flex-grow: 1;
+	align-content: space-around;
+}
+.top .title {
+	padding-left: 10%;
+	flex-basis: 50%;
+	margin: 0;
+	box-sizing: border-box;
+}
+.top .text {
+	flex-basis: 50%;
+}
+.bottom .content {
+	text-align: center;
+}
+
+/*ページ別*/
+#page2 .bottom .content{
+	flex-basis: calc(100% / 3);
+}
+#page2 .bottom img {
+	width: 65%;
+}
+#page2 .bottom .copyRight {
+	margin-right: 17.5%;
+}
+
+#page3 .top .title {
+	padding-left: 5%;
+}
+#page3 .content {
+	flex-basis: calc(100% / 3);
+}
+#page3 .content img {
+	width: 50%;
+}
+#page3 .content .text {
+	font-size: 10px;
+}
 
 
-/* ボタン等 */
+/* navボタン等 */
 nav {
 	position: fixed;
 	width: 110px;
