--- a/about-programming.css
+++ b/about-programming.css
@@ -118,9 +118,12 @@
 	width: 45%;
 }
 
+#page10 .bottom {
+	justify-content: center;
+}
 #page10 .content {
-	flex-basis: 50%;
+	flex-basis: calc(100% / 3);
 }
 #page10 img {
-	width: 30%;
+	width: 70%;
 }
