--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,48 @@ small {
 	margin-bottom: 1em;
 }
 
+.o,
+.x {
+	position: relative;
+}
+.o:after,
+.x:after {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: .5;
+	font-size: 28vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.o:after {
+	content: '\025cb';
+	font-weight: bold;
+	color: blue;
+}
+.x:after {
+	content: '\02715';
+	color: red;
+}
+
+.arrow {
+	position: absolute;
+	top: 50%;
+	right: -5%;
+	padding: 0;
+    box-sizing: border-box;
+    width: 22px;
+    height: 22px;
+    cursor: pointer;
+    border: 12px solid transparent;
+    border-left: 22px solid #3b759e;
+    background: none;
+    outline: none;
+}
+
 /*モーダルウィンドウ*/
 #endModal {
 	transition: opacity .3s;
