--- a/learning-route.css
+++ b/learning-route.css
@@ -1,3 +1,34 @@
+.curriculum {
+
+}
+.curriculum .bottom {
+	align-content: space-around;
+}
+.curriculum .lesson.card {
+	padding: 13.5px 40px 12px;
+	align-items: center;
+	box-sizing: border-box;
+	margin: 0 auto .5em;
+	position: relative;
+}
+.curriculum .lesson.card>a {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+.curriculum .lesson .label {
+	margin: 0 22px 0 0;
+}
+.curriculum .lesson .link {
+	flex-grow: 1;
+}
+.curriculum .lesson .link button {
+	height: 40px;
+	line-height: 40px;
+}
+
 .lesson * {
 	box-sizing: border-box;
 	color: #235d8a;
@@ -5,27 +36,33 @@
 }
 .lesson.card {
 	margin: 15px 0 10px;
-	box-shadow: 0 2px 10px rgba(0,0,0,0.04);
+	box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     font-smoothing: antialiased;
     position: relative;
     width: 100%;
     border-radius: 3px;
     background-color: #fff;
     display: flex;
+    max-width: 960px;
+    margin: 0 auto 1em;
 }
 .lesson .thumbnail {
 	text-align: center;
     border-radius: 3px 0 0 3px;
     padding: 38px 0;
     width: calc(26% * .9);
-    background-color: #4ccfc9;
     flex-shrink: 0;
+    display: flex;
+    align-items: center;
+}
+.lesson.html-css .thumbnail {
+	background-color: #4ccfc9;
+}
+.lesson.html-css.dojo .thumbnail {
+	background-color: #0bc1a2;
 }
 .lesson img {
 	max-width: 100%;
-}
-.lesson .image.html-css {
-    background-image: url(https://d2aj9sy12tbpym.cloudfront.net/assets/languages/lessons/html/study-10537e8….svg);
 }
 .lesson .text {
 	margin: 27px 40px 24px;
@@ -41,6 +78,10 @@
     width: 94px;
     text-align: center;
 }
+.lesson.dojo .label {
+	border: 1px solid #ff7474;
+    color: #ff7474;
+}
 .lesson .title.time {
 	display: flex;
 	align-items: center;
@@ -49,10 +90,10 @@
 .lesson .title {
 	padding-right: 22px;
     border-right: 1px solid #dcdcdc;
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 .lesson .time {
-	font-size: 0.75em;
+	font-size: 0.75rem;
 }
 .lesson .clock {
 	width: 14px;
@@ -62,5 +103,94 @@
 .lesson .detail {
 	margin: 10px 0;
 	height: 48px;
+	text-align: left;
+}
+.lesson .link {
+	display: flex;
+	justify-content: flex-end;
+}
+.lesson .link button {
+	margin: 0 15px;
+	transition: all 0.3s ease;
+	user-select: none;
+	display: inline-block;
+	margin-bottom: 0;
+	padding: 0;
+	font-size: 0.8125rem;
+	text-align: center;
+	min-width: 140px;
+	height: 45px;
+	line-height: 45px;
+	white-space: nowrap;
+	cursor: pointer;
+	color: #fff;
+	border: 1px solid transparent;
+	border-radius: 2px;
+}
+.lesson .link button.white {
+	background-color: #fff;
 }
 
+.lesson.html-css .link button.color {
+	background-color: #4ccfc9;
+}
+.lesson.html-css .link button.color:hover {
+	background-color: #31b7b1;
+}
+.lesson.html-css .link button.white {
+	color: #4ccfc9;
+	border-color: #4ccfc9;
+}
+.lesson.html-css.dojo .link button.color {
+	background-color: #0bc1a2;
+}
+.lesson.html-css.dojo .link button.color:hover {
+	background-color: #08917a;
+}
+.lesson.html-css.dojo .link button.white {
+	color: #0bc1a2;
+	border-color: #0bc1a2;
+}
+
+.border {
+	flex-basis: 100%;
+}
+.border .next,
+.border .prev {
+	width: 10px;
+    height: 25px;
+    background-color: #b6cae3;
+    margin: 0 0 0 11%;
+}
+.border .next {
+	border-radius: 5px 5px 0 0;
+}
+.border .prev {
+	border-radius: 0 0 5px 5px;
+}
+
+
+.bottom .left,
+.bottom .right {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.hint .top {
+	text-align: center;
+	display: initial;
+}
+.hint .top .title {
+	padding-left: 0;
+	flex-basis: auto;
+}
+.hint .top .text {
+	flex-grow: 1;
+}
+.hint .bottom div {
+	align-content: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
