--- a/learning-route.css
+++ b/learning-route.css
@@ -10,6 +10,7 @@
 	box-sizing: border-box;
 	margin: 0 auto .5em;
 	position: relative;
+	cursor: pointer;
 }
 .curriculum .lesson.card>a {
 	position: absolute;
@@ -193,4 +194,62 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+
+.tutorial.card {
+	box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+	transition: all 0.3s ease;
+	background-color: #fff;
+	width: 300px;
+	position: relative;
+	margin-right: 30px;
+	margin-bottom: 30px;
+	border-radius: 3px;
+	vertical-align: top;
+}
+.tutorial.card:first-of-type {
+	margin-left: auto;
+}
+.tutorial.card:last-of-type {
+	margin-right: auto;
+}
+.tutorial.card:hover {
+	box-shadow: 0 3px 10px rgba(0,0,0,0.18);
+}
+
+.tutorial .thumbnail {
+	display: flex;
+	width: 100%;
+	height: 192px;
+	background-color: #4ccfc9;
+}
+.tutorial .thumbnail img {
+	width: initial;
+	margin: auto;
+}
+.tutorial .detail {
+	padding: 36px 28px;
+}
+.tutorial .text {
+    color: #2b546a;
+    font-size: 1.1rem;
+    line-height: 28px;
+    height: 80px;
+}
+.tutorial .title {
+	width: 100%;
+	text-align: left;
+	font-size: 13px;
+	color: #8491a5;
+	margin-bottom: 12px;
+}
+
+#page6 .top a:link,
+#page6 .top a:visited {
+	text-decoration: underline;
+}
+
+.practice .bottom p {
+	flex-basis: 100%;
+	text-align: center;
 }
