--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,9 @@ body {
 	color: inherit;
 	text-decoration: none;
 }
+.hide {
+	display: none;
+}
 .swiper-container {
 	background: radial-gradient(
 		circle at center center,
