--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,14 @@ body {
 	color: inherit;
 	text-decoration: none;
 }
+.link:link,
+.link:visited,
+.link *:link,
+.link *:visited {
+	text-decoration: underline;
+}
 .hide {
-	display: none;
+	display: none !important;
 }
 .swiper-container {
 	background: radial-gradient(
